--- a/kubernetes/apps/k2s/database/influxdb/app/helmrelease.yaml
+++ b/kubernetes/apps/k2s/database/influxdb/app/helmrelease.yaml
@@ -36,7 +36,7 @@ spec:
         memory: 512Mi
     persistence:
       enabled: true
-      storageClass: ceph-pool
+      storageClassName: local-path
       size: 8Gi
     setDefaultUser:
       enabled: true
