update weave client id

--- a/kubernetes/apps/k2s/flux-system/weave-gitops/app/externalsecret.yaml
+++ b/kubernetes/apps/k2s/flux-system/weave-gitops/app/externalsecret.yaml
@@ -17,7 +17,7 @@ spec:
         values.yaml: |
           oidcSecret:
             create: true
-            clientID: "weave-gitops"
+            clientID: "k2s-weave-gitops"
             clientSecret: "{{ .GITOPS_CLIENT_SECRET }}"
             issuerURL: "https://dex.logfold.com"
             redirectURL: "https://gitops.${DOMAIN}/oauth2/callback"
