--- a/kubernetes/apps/k2s/database/kustomization.yaml
+++ b/kubernetes/apps/k2s/database/kustomization.yaml
@@ -8,5 +8,5 @@ resources:
   - ./externalsecret.yaml
   # Flux-Kustomizations
   - ./emqx/ks.yaml
-  - ./influxdb/ks.yaml
+  #- ./influxdb/ks.yaml
   - ./redis/ks.yaml
