--- a/kubernetes/apps/k2s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k2s/kube-system/cilium/app/helmrelease.yaml
@@ -37,7 +37,7 @@ spec:
       name: "${ENVIRONMENT}"
       id: "${CILIUM_ID}"
     clustermesh:
-      useAPIServer: false
+      useAPIServer: true
       apiserver:
         tls:
           auto:
