--- a/kubernetes/apps/k1s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k1s/kube-system/cilium/app/helmrelease.yaml
@@ -26,7 +26,7 @@ spec:
   uninstall:
     keepHistory: false
   values:
-    autoDirectNodeRoutes: true
+    autoDirectNodeRoutes: false
     enable-ipv4-masquerade: true
     #policyAuditMode: true
     bpf:
