--- a/ansible/kubernetes/inventory/k0s/hosts.yaml
+++ b/ansible/kubernetes/inventory/k0s/hosts.yaml
@@ -1,12 +1,12 @@
 ---
 kubernetes:
   vars:
-    ansible_user: nucstack
+    ansible_user: k8s
     ansible_ssh_port: 22
   children:
     master:
       hosts:
-        k8s-0:
-          ansible_host: 192.168.9.9
+        k0s-1:
+          ansible_host: 192.168.8.226
           ceph_drives:
             - /dev/disk/by-id/nvme-PM981_NVMe_Samsung_512GB_______S3ZHNA0KA01345
