--- a/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -39,7 +39,7 @@ spec:
     clustermesh:
       useAPIServer: true
       config:
-        enabled: true
+        enabled: false
         clusters:
         - name: k1s
           address: k1s.mesh.cilium.io
