--- a/kubernetes/apps/k2s/vault/kustomization.yaml
+++ b/kubernetes/apps/k2s/vault/kustomization.yaml
@@ -5,5 +5,6 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  - ./service.yaml
   # Flux-Kustomizations
   - ./vault-injector/ks.yaml
