test vxlan routing mode

--- a/kubernetes/apps/k1s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k1s/kube-system/cilium/app/helmrelease.yaml
@@ -26,6 +26,9 @@ spec:
   uninstall:
     keepHistory: false
   values:
+    tunnelProtocol: vxlan
+    routingMode: tunnel
+    tunnelPort: 8472
     autoDirectNodeRoutes: false
     enable-ipv4-masquerade: true
     #policyAuditMode: true
