--- a/kubernetes/apps/k1s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k1s/kube-system/cilium/app/helmrelease.yaml
@@ -136,7 +136,7 @@ spec:
     loadBalancer:
       algorithm: maglev
       serviceTopology: true
-      mode: dsr
+      mode: snat
     localRedirectPolicy: true
     operator:
       replicas: 1
