--- a/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -26,6 +26,9 @@ spec:
   uninstall:
     keepHistory: false
   values:
+    tunnelProtocol: vxlan
+    routingMode: tunnel
+    tunnelPort: 8472
     autoDirectNodeRoutes: false
     enable-ipv4-masquerade: true
     #policyAuditMode: true
@@ -142,7 +145,7 @@ spec:
     loadBalancer:
       algorithm: maglev
       serviceTopology: true
-      mode: dsr
+      mode: snat
     localRedirectPolicy: true
     operator:
       replicas: 1
