--- a/kubernetes/apps/k0s/storage/minio-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/storage/minio-operator/app/helmrelease.yaml
@@ -28,6 +28,10 @@ spec:
   values:
     operator:
       replicaCount: 1
+      image:
+          repository: quay.io/minio/operator
+          tag: v5.0.11-amd64
+          pullPolicy: IfNotPresent
     console:
       ingress:
         enabled: true
