fix external secrets

--- a/kubernetes/apps/shared/kube-system/kustomization.yaml
+++ b/kubernetes/apps/shared/kube-system/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./coredns/ks.yaml
+  - ./external-secrets/ks.yaml
   - ./local-path-provisioner/ks.yaml
   - ./metrics-server/ks.yaml
   - ./node-feature-discovery/ks.yaml
