improve resiliency of bootstrap tasks

--- a/.taskfiles/ansible.yaml
+++ b/.taskfiles/ansible.yaml
@@ -44,6 +44,7 @@ tasks:
     cmds:
       - task ansible:install
       - task flux:install
+      - kubectl --context {{.ENVIRONMENT}} wait --for jsonpath='{.status.phase}=Active' --timeout=120s namespace/cert-manager
       - kubectl --context {{.ENVIRONMENT}} -n cert-manager wait --for condition=available --timeout=120s deploy/cert-manager-webhook
       - task vault:bootstrap
     silent: true
@@ -53,6 +54,7 @@ tasks:
     cmds:
       - task ansible:install
       - task flux:install
+      - kubectl --context {{.ENVIRONMENT}} wait --for jsonpath='{.status.phase}=Active' --timeout=120s namespace/cert-manager
       - kubectl --context {{.ENVIRONMENT}} -n cert-manager wait --for condition=available --timeout=120s deploy/cert-manager-webhook
       - task vault:enable-k8s-auth
       - task vault:add-roles
