--- a/kubernetes/apps/k2s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k2s/kube-system/cilium/app/helmrelease.yaml
@@ -44,9 +44,9 @@ spec:
         - name: k0s
           address: k0s.mesh.cilium.io
           port: 2379
-        - name: k1s
-          address: k1s.mesh.cilium.io
-          port: 2379
+        #- name: k1s
+        #  address: k1s.mesh.cilium.io
+        #  port: 2379
       apiserver:
         tls:
           auto:
