--- a/kubernetes/apps/k1s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k1s/kube-system/cilium/app/helmrelease.yaml
@@ -38,15 +38,15 @@ spec:
       id: "${CILIUM_ID}"
     clustermesh:
       useAPIServer: true
-      # config:
-      #   enabled: true
-      #   clusters:
-      #   - name: k0s
-      #     address: k0s.mesh.cilium.io
-      #     port: 2379
-      #   - name: k2s
-      #     address: k2s.mesh.cilium.io
-      #     port: 2379
+      config:
+        enabled: true
+        clusters:
+        - name: k0s
+          address: k0s.mesh.cilium.io
+          port: 2379
+        - name: k2s
+          address: k2s.mesh.cilium.io
+          port: 2379
       apiserver:
         tls:
           auto:
