--- a/kubernetes/apps/k2s/ingress/externalsecret.yaml
+++ b/kubernetes/apps/k2s/ingress/externalsecret.yaml
@@ -13,7 +13,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "https://vault.vault:8200"
+      server: "http://vault.vault:8200"
       path: "secret"
       version: "v2"
       auth:
