flip to using mesh for vmetrics

--- a/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -73,6 +73,10 @@ spec:
           replicaCount: 2
           extraArgs:
             maxLabelsPerTimeseries: "180" # More needed if you are scraping a LOT of stuff and having issues
+          serviceSpec:
+            metadata:
+              annotations:
+                io.cilium/global-service: true
       ingress:
         storage:
           enabled: false
