--- a/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -76,7 +76,7 @@ spec:
           serviceSpec:
             metadata:
               annotations:
-                io.cilium/global-service: true
+                io.cilium/global-service: "true"
       ingress:
         storage:
           enabled: false
