--- a/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -87,6 +87,7 @@ spec:
                 managed-by: vm-operator
               type: ClusterIP
             metadata:
+              name: vminsert
               annotations:
                 io.cilium/global-service: "true"
       ingress:
