--- a/kubernetes/apps/k2s/monitoring/victoria-metrics/app/service.yaml
+++ b/kubernetes/apps/k2s/monitoring/victoria-metrics/app/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: vminsert-victoria-metrics
+  name: vminsert
   namespace: monitoring
   annotations:
     io.cilium/global-service: true
