--- a/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -110,7 +110,7 @@ spec:
             - hosts:
                 - *hostselect
         insert:
-          enabled: true
+          enabled: false
           ingressClassName: nginx
           pathType: Prefix
           hosts:
