add cilium global services

--- a/kubernetes/apps/k0s/ingress/nginx/external-ingress/unifi.yaml
+++ b/kubernetes/apps/k0s/ingress/nginx/external-ingress/unifi.yaml
@@ -4,6 +4,8 @@ kind: Service
 metadata:
   name: unifi
   namespace: ingress
+  annotations:
+    io.cilium/global-service: "true"
 spec:
   ports:
   - name: http
