--- a/kubernetes/apps/k0s/ingress/nginx/external-ingress/proxmox.yaml
+++ b/kubernetes/apps/k0s/ingress/nginx/external-ingress/proxmox.yaml
@@ -4,6 +4,8 @@ kind: Service
 metadata:
   name: proxmox
   namespace: ingress
+  annotations:
+    io.cilium/global-service: "true"
 spec:
   ports:
   - name: http
