--- a/kubernetes/apps/k1s/ingress/nginx/ks.yaml
+++ b/kubernetes/apps/k1s/ingress/nginx/ks.yaml
@@ -14,3 +14,21 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 5m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cluster-apps-external-ingress
+  namespace: flux-system
+spec:
+  dependsOn:
+  - name: shared-apps-cert-manager
+  path: ./kubernetes/apps/${ENVIRONMENT}/ingress/nginx/external-ingress
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  wait: true
+  interval: 30m
+  retryInterval: 1m
+  timeout: 5m
