--- a/kubernetes/apps/k0s/ingress/nginx/ks.yaml
+++ b/kubernetes/apps/k0s/ingress/nginx/ks.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   dependsOn:
   - name: shared-apps-cert-manager
-  path: ./kubernetes/apps/${ENVIRONMENT}/ingress/nginx/app
+  path: ./kubernetes/clusters/${ENVIRONMENT}/ingress/nginx/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -25,7 +25,7 @@ metadata:
 spec:
   dependsOn:
   - name: shared-apps-cert-manager
-  path: ./kubernetes/apps/${ENVIRONMENT}/ingress/nginx/certificates
+  path: ./kubernetes/clusters/${ENVIRONMENT}/ingress/nginx/certificates
   prune: true
   sourceRef:
     kind: GitRepository
@@ -43,7 +43,7 @@ metadata:
 spec:
   dependsOn:
   - name: shared-apps-cert-manager
-  path: ./kubernetes/apps/${ENVIRONMENT}/ingress/nginx/external-ingress
+  path: ./kubernetes/clusters/${ENVIRONMENT}/ingress/nginx/external-ingress
   prune: true
   sourceRef:
     kind: GitRepository
