--- a/kubernetes/apps/k0s/security/dex/ks.yaml
+++ b/kubernetes/apps/k0s/security/dex/ks.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-apps-lldap
-  path: ./kubernetes/apps/${ENVIRONMENT}/security/dex/app
+  path: ./kubernetes/clusters/${ENVIRONMENT}/security/dex/app
   prune: true
   sourceRef:
     kind: GitRepository
