--- a/kubernetes/apps/k0s/vault/vault/ks.yaml
+++ b/kubernetes/apps/k0s/vault/vault/ks.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   dependsOn:
     - name: shared-apps-local-path-provisioner
-  path: ./kubernetes/apps/${ENVIRONMENT}/vault/vault/app
+  path: ./kubernetes/clusters/${ENVIRONMENT}/vault/vault/app
   prune: true
   sourceRef:
     kind: GitRepository
