--- a/kubernetes/apps/k1s/ingress/nginx/ks.yaml
+++ b/kubernetes/apps/k1s/ingress/nginx/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-nginx
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/${ENVIRONMENT}/ingress/nginx/app
+  path: ./kubernetes/clusters/${ENVIRONMENT}/ingress/nginx/app
   prune: true
   sourceRef:
     kind: GitRepository
