--- a/kubernetes/apps/k2s/database/emqx/ks.yaml
+++ b/kubernetes/apps/k2s/database/emqx/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-emqx
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/${ENVIRONMENT}/database/emqx/app
+  path: ./kubernetes/clusters/${ENVIRONMENT}/database/emqx/app
   prune: true
   sourceRef:
     kind: GitRepository
