--- a/kubernetes/apps/k2s/home-automation/esphome/ks.yaml
+++ b/kubernetes/apps/k2s/home-automation/esphome/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-esphome
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/${ENVIRONMENT}/home-automation/esphome/app
+  path: ./kubernetes/clusters/${ENVIRONMENT}/home-automation/esphome/app
   prune: true
   sourceRef:
     kind: GitRepository
