--- a/kubernetes/apps/k2s/home-automation/home-assistant/ks.yaml
+++ b/kubernetes/apps/k2s/home-automation/home-assistant/ks.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-apps-home-automation-home-assistant-database
-  path: ./kubernetes/apps/${ENVIRONMENT}/home-automation/home-assistant/app
+  path: ./kubernetes/clusters/${ENVIRONMENT}/home-automation/home-assistant/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -25,7 +25,7 @@ metadata:
 spec:
   dependsOn:
     - name: shared-apps-cloudnative-pg
-  path: ./kubernetes/apps/${ENVIRONMENT}/home-automation/home-assistant/database
+  path: ./kubernetes/clusters/${ENVIRONMENT}/home-automation/home-assistant/database
   prune: true
   sourceRef:
     kind: GitRepository
