--- a/kubernetes/apps/k2s/ingress/cloudflared/ks.yaml
+++ b/kubernetes/apps/k2s/ingress/cloudflared/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-cloudflared
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/${ENVIRONMENT}/ingress/cloudflared/app
+  path: ./kubernetes/clusters/${ENVIRONMENT}/ingress/cloudflared/app
   prune: true
   sourceRef:
     kind: GitRepository
