--- a/kubernetes/apps/k2s/monitoring/victoria-logs/ks.yaml
+++ b/kubernetes/apps/k2s/monitoring/victoria-logs/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-victoria-logs
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/${ENVIRONMENT}/monitoring/victoria-logs/app
+  path: ./kubernetes/clusters/${ENVIRONMENT}/monitoring/victoria-logs/app
   prune: true
   sourceRef:
     kind: GitRepository
