--- a/kubernetes/apps/k2s/security/oauth2-proxy/ks.yaml
+++ b/kubernetes/apps/k2s/security/oauth2-proxy/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-oauth2-proxy
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/${ENVIRONMENT}/security/oauth2-proxy/app
+  path: ./kubernetes/clusters/${ENVIRONMENT}/security/oauth2-proxy/app
   prune: true
   sourceRef:
     kind: GitRepository
