--- a/kubernetes/apps/k0s/ingress/nginx/ks.yaml
+++ b/kubernetes/apps/k0s/ingress/nginx/ks.yaml
@@ -8,7 +8,7 @@ spec:
   dependsOn:
   - name: shared-apps-cert-manager
   path: ./kubernetes/clusters/${ENVIRONMENT}/ingress/nginx/app
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
@@ -26,7 +26,7 @@ spec:
   dependsOn:
   - name: shared-apps-cert-manager
   path: ./kubernetes/clusters/${ENVIRONMENT}/ingress/nginx/certificates
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
@@ -44,7 +44,7 @@ spec:
   dependsOn:
   - name: shared-apps-cert-manager
   path: ./kubernetes/clusters/${ENVIRONMENT}/ingress/nginx/external-ingress
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
