--- a/kubernetes/apps/k0s/monitoring/victoria-metrics/ks.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-metrics/ks.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   path: ./kubernetes/clusters/k0s/monitoring/victoria-metrics/app
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
