--- a/kubernetes/apps/k0s/storage/restic/ks.yaml
+++ b/kubernetes/apps/k0s/storage/restic/ks.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   path: ./kubernetes/clusters/${ENVIRONMENT}/storage/restic/app
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
