--- a/kubernetes/apps/k0s/vault/vault/ks.yaml
+++ b/kubernetes/apps/k0s/vault/vault/ks.yaml
@@ -8,7 +8,7 @@ spec:
   dependsOn:
     - name: shared-apps-local-path-provisioner
   path: ./kubernetes/clusters/${ENVIRONMENT}/vault/vault/app
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
