--- a/kubernetes/apps/k2s/home-automation/esphome/ks.yaml
+++ b/kubernetes/apps/k2s/home-automation/esphome/ks.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   path: ./kubernetes/clusters/${ENVIRONMENT}/home-automation/esphome/app
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
