--- a/kubernetes/apps/k2s/media/immich/ks.yaml
+++ b/kubernetes/apps/k2s/media/immich/ks.yaml
@@ -8,7 +8,7 @@ spec:
   dependsOn:
     - name: cluster-apps-media-immich-database
   path: ./kubernetes/clusters/${ENVIRONMENT}/media/immich/app
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
@@ -26,7 +26,7 @@ spec:
   dependsOn:
     - name: shared-apps-cloudnative-pg
   path: ./kubernetes/clusters/${ENVIRONMENT}/media/immich/database
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
