--- a/kubernetes/apps/k2s/security/oauth2-proxy/ks.yaml
+++ b/kubernetes/apps/k2s/security/oauth2-proxy/ks.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   path: ./kubernetes/clusters/${ENVIRONMENT}/security/oauth2-proxy/app
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
