--- a/kubernetes/apps/k2s/vault/vault-injector/ks.yaml
+++ b/kubernetes/apps/k2s/vault/vault-injector/ks.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   path: ./kubernetes/clusters/${ENVIRONMENT}/vault/vault-injector/app
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
