--- a/kubernetes/apps/shared/database/cloudnative-pg/ks.yaml
+++ b/kubernetes/apps/shared/database/cloudnative-pg/ks.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   path: ./kubernetes/clusters/shared/database/cloudnative-pg/app
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
