--- a/kubernetes/flux/apps.yaml
+++ b/kubernetes/flux/apps.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   interval: 10m
   path: "./kubernetes/clusters/shared"
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
@@ -43,7 +43,7 @@ metadata:
 spec:
   interval: 10m
   path: "./kubernetes/clusters/${ENVIRONMENT}"
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
