--- a/kubernetes/clusters/k1s/cert-manager/kustomization.yaml
+++ b/kubernetes/clusters/k1s/cert-manager/kustomization.yaml
@@ -3,4 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./letsencrypt.yaml
+  # Pre Flux-Kustomizations
+  - ./externalsecret.yaml
+  # Flux-Kustomizations
+  - ./issuers/ks.yaml
