--- a/kubernetes/clusters/k1s/cert-manager/kustomization.yaml
+++ b/kubernetes/clusters/k1s/cert-manager/kustomization.yaml
@@ -5,5 +5,6 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./externalsecret.yaml
+  - ./role.yaml
   # Flux-Kustomizations
   - ./issuers
