--- a/kubernetes/clusters/k1s/cert-manager/role.yaml
+++ b/kubernetes/clusters/k1s/cert-manager/role.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: vault-auth
+  name: vault-issuer
   namespace: cert-manager
 rules:
   - apiGroups: ['']
