--- a/kubernetes/clusters/k1s/cert-manager/issuers/role.yaml
+++ b/kubernetes/clusters/k1s/cert-manager/issuers/role.yaml
@@ -1,3 +1,10 @@
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: vault-issuer
+  namespace: cert-manager
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -6,7 +13,7 @@ metadata:
 rules:
   - apiGroups: ['']
     resources: ['serviceaccounts/token']
-    resourceNames: ['vault-auth']
+    resourceNames: ['vault-issuer']
     verbs: ['create']
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -16,7 +23,7 @@ metadata:
   namespace: cert-manager
 subjects:
   - kind: ServiceAccount
-    name: vault-auth
+    name: vault-issuer
     namespace: cert-manager
 roleRef:
   apiGroup: rbac.authorization.k8s.io
