--- a/kubernetes/clusters/k1s/cert-manager/issuers/role.yaml
+++ b/kubernetes/clusters/k1s/cert-manager/issuers/role.yaml
@@ -9,7 +9,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: vault-issuer
-  namespace: cert-manager
+  namespace: kube-system
 rules:
   - apiGroups: ['']
     resources: ['serviceaccounts/token']
@@ -20,7 +20,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: vault-issuer
-  namespace: cert-manager
+  namespace: kube-system
 subjects:
   - kind: ServiceAccount
     name: cert-manager
