--- a/kubernetes/clusters/k1s/cert-manager/issuers/role.yaml
+++ b/kubernetes/clusters/k1s/cert-manager/issuers/role.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: vault-issuer
-  namespace: cert-manager
+  namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
