--- a/kubernetes/clusters/k1s/kube-system/issuers/vault.yaml
+++ b/kubernetes/clusters/k1s/kube-system/issuers/vault.yaml
@@ -2,7 +2,7 @@
 apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
-  name: vault-issuer-test
+  name: vault-issuer
   namespace: kube-system
 spec:
   vault:
