--- a/kubernetes/clusters/k1s/kube-system/kustomization.yaml
+++ b/kubernetes/clusters/k1s/kube-system/kustomization.yaml
@@ -5,6 +5,5 @@ kind: Kustomization
 resources:
   # Flux-Kustomizations
   - ./cilium/ks.yaml
-  # Flux-Kustomizations
-  - ./issuers
+  - ./issuers/ks.yaml
 
