--- a/kubernetes/clusters/k2s/kube-system/issuers/vault/kustomization.yaml
+++ b/kubernetes/clusters/k2s/kube-system/issuers/vault/kustomization.yaml
@@ -3,7 +3,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # Flux-Kustomizations
-  - ./cilium/ks.yaml
-  - ./issuers/ks.yaml
-  #- ./tetragon/ks.yaml
+  - ./role.yaml
+  - ./vault.yaml
