--- a/kubernetes/clusters/k1s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/k1s/kube-system/cilium/app/helmrelease.yaml
@@ -37,7 +37,7 @@ spec:
       name: "${ENVIRONMENT}"
       id: "${CILIUM_ID}"
     clustermesh:
-      useAPIServer: true
+      useAPIServer: false
       config:
         enabled: true
         clusters:
