--- a/kubernetes/clusters/k2s/media/immich/app/server/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/media/immich/app/server/helmrelease.yaml
@@ -73,6 +73,25 @@ spec:
         ports:
           http:
             port: 3001
+    ingress:
+      main:
+        enabled: true
+        className: nginx
+        annotations:
+          nignx.ingress.kubernetes.io/force-ssl-redirect: "true"
+          nginx.ingress.kubernetes.io/proxy-body-size: "0"
+          nginx.ingress.kubernetes.io/upstream-hash-by: "$client_ip"
+        hosts:
+          - host: &host immich.${DOMAIN}
+            paths:
+              - path: /
+                pathType: Prefix
+                service:
+                  name: main
+                  port: 3001
+        tls:
+          - hosts:
+              - *host
     persistence:
       library:
         type: persistentVolumeClaim
