--- a/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -33,6 +33,9 @@ spec:
       mutual:
         spire:
           enabled: true
+          server:
+            datastorage:
+              enabled: false
           install:
             enabled: true
     bpf:
