--- a/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
           enabled: true
           server:
             datastorage:
-              enabled: false
+              enabled: true
               size: 1Gi
               accessMode: ReadWriteOnce
               storageClass: local-path
