--- a/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
         spire:
           enabled: true
           server:
-            datastorage:
+            dataStorage:
               enabled: true
               size: 1Gi
               accessMode: ReadWriteOnce
