--- a/.env.example
+++ b/.env.example
@@ -100,6 +100,8 @@ LLDAP_LDAP_BASE_DN="dc=example,dc=com"
 LLDAP_LB_IP="192.168.0.5"
 
 # loki - 'htpasswd -c loki_auth <user>'
+LOKI_MINIO_ACCESS_KEY="xxxxxxxx"
+LOKI_MINIO_SECRET_KEY="xxxxxxxx"
 LOKI_BASIC_AUTH="xxxxxxxx"
 LOKI_USERNAME="xxxxxxxx"
 LOKI_PASSWORD="xxxxxxxx"
