--- a/kubernetes/clusters/k0s/monitoring/loki/app/externalsecret.yaml
+++ b/kubernetes/clusters/k0s/monitoring/loki/app/externalsecret.yaml
@@ -14,8 +14,8 @@ spec:
     template:
       engineVersion: v2
       data:
-        MINIO_ACCESS_KEY: "{{ .LOKI_MINIO_ACCESS_KEY }}"
-        MINIO_SECRET_KEY: "{{ .LOKI_MINIO_SECRET_KEY }}"
+        MINIO_ACCESS_KEY: "{{ .MINIO_ACCESS_KEY }}"
+        MINIO_SECRET_KEY: "{{ .MINIO_SECRET_KEY }}"
   dataFrom:
     - extract:
         key: /monitoring/loki
