--- a/kubernetes/clusters/k0s/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/loki/app/helmrelease.yaml
@@ -62,7 +62,7 @@ spec:
           storage:
             s3:
               bucketnames: loki
-              endpoint: https://minio.storage.svc.cluster.local
+              endpoint: http://minio-pool-hl.storage.svc.cluster.local:9000
               region: us-east-1
               s3: null
               insecure: true
@@ -73,7 +73,7 @@ spec:
         ruler:
           enable_api: true
           enable_alertmanager_v2: true
-          alertmanager_url: http://kube-prometheus-stack-alertmanager.monitoring.svc.cluster.local:9093
+          alertmanager_url: http://vmalertmanager-victoria-metrics.monitoring.svc.cluster.local:9093
           storage:
             type: local
             local:
