--- a/kubernetes/clusters/k0s/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/loki/app/helmrelease.yaml
@@ -62,11 +62,13 @@ spec:
           storage:
             s3:
               bucketnames: loki
-              endpoint: http://minio-pool-hl.storage.svc.cluster.local:9000
+              endpoint: https://minio.storage.svc.cluster.local
               region: us-east-1
               s3: null
               insecure: true
               s3forcepathstyle: true
+              http_config:
+                insecure_skip_verify: true
           ring:
             kvstore:
               store: memberlist
