--- a/kubernetes/clusters/k0s/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/loki/app/helmrelease.yaml
@@ -61,6 +61,7 @@ spec:
           replication_factor: 2
           storage:
             type: filesystem
+            s3: null
           ring:
             kvstore:
               store: memberlist
