--- a/kubernetes/clusters/k0s/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/loki/app/helmrelease.yaml
@@ -49,7 +49,7 @@ spec:
             enabled: true
         schema_config:
           configs:
-            - from: "2022-01-11" # quote
+            - from: "2022-01-11"
               store: boltdb-shipper
               object_store: s3
               schema: v12
@@ -126,27 +126,27 @@ spec:
       replicas: 1
       persistence:
         storageClass: local-path
-      # extraVolumeMounts:
-      #   - name: rules
-      #     mountPath: /rules
-      # extraVolumes:
-      #   - name: rules
-      #     emptyDir: {}
+      extraVolumeMounts:
+        - name: rules
+          mountPath: /rules
+      extraVolumes:
+        - name: rules
+          emptyDir: {}
     backend:
       replicas: 1
       persistence:
         storageClass: local-path
-      # extraVolumeMounts:
-      #   - name: rules
-      #     mountPath: /rules/fake
-      #   - name: scratch
-      #     mountPath: /tmp/scratch
-      # extraVolumes:
-      #   - name: rules
-      #     configMap:
-      #       name: loki-alerting-rules
-      #   - name: scratch
-      #     emptyDir: {}
+      extraVolumeMounts:
+        - name: rules
+          mountPath: /rules/fake
+        - name: scratch
+          mountPath: /tmp/scratch
+      extraVolumes:
+        - name: rules
+          configMap:
+            name: loki-alerting-rules
+        - name: scratch
+          emptyDir: {}
     monitoring:
       dashboards:
         annotations:
