--- a/kubernetes/clusters/k0s/monitoring/loki/app/kustomization.yaml
+++ b/kubernetes/clusters/k0s/monitoring/loki/app/kustomization.yaml
@@ -6,3 +6,9 @@ namespace: monitoring
 resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
+configMapGenerator:
+  - name: loki-alerting-rules
+    files:
+      - loki-alerting-rules.yaml=./rules/loki-alerting-rules.yaml
+generatorOptions:
+  disableNameSuffixHash: true
