drop loki from k0s make minio service global

--- a/kubernetes/clusters/k0s/storage/minio-operator/tenant/tenant.yaml
+++ b/kubernetes/clusters/k0s/storage/minio-operator/tenant/tenant.yaml
@@ -40,3 +40,6 @@ spec:
     - name: "loki"
       region: "us-east-1"
       objectLock: false
+  serviceMetadata:
+    minioServiceAnnotations:
+      io.cilium/global-service: "true"
